// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Resource Image 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "height": "100%",
        "width": "100%",
      },
      Object {
        "height": 180,
        "width": 320,
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "uri": "https://api.coorpacademy.com/api-service/medias?url=https%3A%2F%2Fstatic.coorpacademy.com%2Fcontent%2FCoorpAcademy%2Fcontent-partnerships-fabernovel%2Fcockpit-fabernovel%2Fdefault%2Fimage-support-de-cours-1543490353160.jpg&m=contain&q=90&w=640&h=360",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="image-background"
  />
</View>
`;

exports[`Storyshots Resource PDF (with extra life) 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/image-support-de-cours-1543490353160.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="preview-extralife"
      >
        <View
          testID="preview-extralife-icon"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "left": -8,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={45}
              bbWidth={45}
              color={4294967295}
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "height": 45,
                    "width": 45,
                  },
                  Object {
                    "flex": 0,
                    "height": 45,
                    "width": 45,
                  },
                ]
              }
              tintColor={4294967295}
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup>
                <RNSVGPath
                  d="M0 0h24v24H0z"
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 30,
                  "height": 59,
                  "justifyContent": "center",
                  "marginLeft": -10,
                  "width": 59,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    Object {
                      "color": "#546E7A",
                      "fontSize": 22,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                +
                1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginLeft": 7,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={38}
                bbWidth={38}
                color={4294967295}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 28,
                        "position": "absolute",
                        "width": 28,
                      },
                      Object {
                        "height": 38,
                        "width": 38,
                      },
                    ],
                    Object {
                      "flex": 0,
                      "height": 38,
                      "width": 38,
                    },
                  ]
                }
                tintColor={4294967295}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294967295}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={28}
                bbWidth={28}
                color={4294393682}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "height": 28,
                      "position": "absolute",
                      "width": 28,
                    },
                    Object {
                      "flex": 0,
                      "height": 28,
                      "width": 28,
                    },
                  ]
                }
                tintColor={4294393682}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294393682}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294393682}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingTop": 24,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {},
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 15,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Bonus!
            </Text>
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 15,
                      "textAlign": "center",
                    },
                    Object {
                      "fontWeight": "700",
                    },
                  ],
                ]
              }
            >
              Get an extra life by viewing the lesson
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource PDF 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "height": 180,
      },
    ]
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/image-support-de-cours-1543490353160.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "width": "45%",
          }
        }
        testID="preview-pdf"
      >
        <View
          style={
            Object {
              "alignSelf": "center",
            }
          }
          testID="preview-pdf-icon"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={45}
            bbWidth={45}
            color={4294967295}
            focusable={false}
            height={45}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 45,
                  "width": 45,
                },
              ]
            }
            tintColor={4294967295}
            vbHeight={24}
            vbWidth={24}
            width={45}
          >
            <RNSVGGroup>
              <RNSVGPath
                d="M0 0h24v24H0z"
                fill={null}
                propList={
                  Array [
                    "fill",
                  ]
                }
              />
              <RNSVGGroup
                fill={4294967295}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M5 3h10v4h4v1h2V5.586L16.414 1H5c-1.103 0-2 .898-2 2v5h2V3zM19 21H5v-1H3v1c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-1h-2v1zM9 10v8h2c2.206 0 4-1.794 4-4s-1.794-4-4-4H9zm4 4c0 1.103-.897 2-2 2v-4c1.103 0 2 .898 2 2zM22 12v-2h-4c-1.103 0-2 .898-2 2v6h2v-3h3v-2h-3v-1h4zM4 16h1c1.654 0 3-1.346 3-3s-1.346-3-3-3H2v8h2v-2zm0-4h1a1.001 1.001 0 010 2H4v-2z"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        />
        <View
          testID="preview-pdf-button"
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "transparent",
                "borderColor": "#FFFFFF",
                "borderRadius": 32,
                "borderWidth": 2,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "center",
                "marginBottom": 0,
                "opacity": 1,
                "paddingHorizontal": 24,
              }
            }
            testID="preview-pdf-button-native"
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 17,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#546E7A",
                  },
                  undefined,
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              Open
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Unsupported type 1`] = `null`;

exports[`Storyshots Resource Video (omniPlayer without thumbnail) 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowsInlineMediaPlayback={true}
      cacheEnabled={true}
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://mms.myomni.live/5e6126fdbe444d66709afab1",
        }
      }
      startInLoadingState={true}
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          },
        ]
      }
      testID="video-omniplayer-webview-video"
      useSharedProcessPool={true}
      useWebKit={true}
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="video-omniplayer-webview-preview-container"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="video-omniplayer-webview-preview-video"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 36,
                "justifyContent": "center",
                "transform": Array [
                  Object {
                    "scaleX": 0.5,
                  },
                  Object {
                    "scaleY": 0.5,
                  },
                  Object {
                    "rotateZ": "0deg",
                  },
                ],
                "width": 36,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F73F52",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "45deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3EC483",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "135deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFE100",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "225deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "315deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video (omniPlayer) 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      Object {
        "height": 180,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <RNCWebView
      allowsInlineMediaPlayback={true}
      cacheEnabled={true}
      injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
      injectedJavaScriptForMainFrameOnly={true}
      javaScriptEnabled={true}
      messagingEnabled={false}
      onContentProcessDidTerminate={[Function]}
      onHttpError={[Function]}
      onLoadingError={[Function]}
      onLoadingFinish={[Function]}
      onLoadingProgress={[Function]}
      onLoadingStart={[Function]}
      onMessage={[Function]}
      onShouldStartLoadWithRequest={[Function]}
      source={
        Object {
          "uri": "https://mms.myomni.live/5e6126fdbe444d66709afab1",
        }
      }
      startInLoadingState={true}
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
          },
        ]
      }
      testID="video-omniplayer-webview-video"
      useSharedProcessPool={true}
      useWebKit={true}
    />
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": "100%",
            "width": "100%",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/vignette_fabernovel_new-1543482536203.png",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
        testID="video-omniplayer-webview-preview-container"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="video-omniplayer-webview-preview-video"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 36,
                "justifyContent": "center",
                "transform": Array [
                  Object {
                    "scaleX": 0.5,
                  },
                  Object {
                    "scaleY": 0.5,
                  },
                  Object {
                    "rotateZ": "0deg",
                  },
                ],
                "width": 36,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#F73F52",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "45deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#3EC483",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "135deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#FFE100",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "225deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "#00B0FF",
                  "borderRadius": 3,
                  "height": 6,
                  "position": "absolute",
                  "transform": Array [
                    Object {
                      "rotateZ": "315deg",
                    },
                    Object {
                      "translateX": -15,
                    },
                  ],
                  "width": 18,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video (with extra life) 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/vignette_fabernovel_new-1543482536203.png",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-preview-extralife"
      >
        <View
          testID="video-preview-extralife-icon"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "left": -8,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={45}
              bbWidth={45}
              color={4294967295}
              focusable={false}
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "height": 45,
                    "width": 45,
                  },
                  Object {
                    "flex": 0,
                    "height": 45,
                    "width": 45,
                  },
                ]
              }
              tintColor={4294967295}
              vbHeight={24}
              vbWidth={24}
            >
              <RNSVGGroup>
                <RNSVGPath
                  d="M0 0h24v24H0z"
                  fill={null}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
                <RNSVGPath
                  d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
                  fill={4294967295}
                  propList={
                    Array [
                      "fill",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderRadius": 30,
                  "height": 59,
                  "justifyContent": "center",
                  "marginLeft": -10,
                  "width": 59,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    Object {
                      "color": "#546E7A",
                      "fontSize": 22,
                      "fontWeight": "700",
                    },
                  ]
                }
              >
                +
                1
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginLeft": 7,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={38}
                bbWidth={38}
                color={4294967295}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Array [
                      Object {
                        "height": 28,
                        "position": "absolute",
                        "width": 28,
                      },
                      Object {
                        "height": 38,
                        "width": 38,
                      },
                    ],
                    Object {
                      "flex": 0,
                      "height": 38,
                      "width": 38,
                    },
                  ]
                }
                tintColor={4294967295}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294967295}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294967295}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight={28}
                bbWidth={28}
                color={4294393682}
                focusable={false}
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "height": 28,
                      "position": "absolute",
                      "width": 28,
                    },
                    Object {
                      "flex": 0,
                      "height": 28,
                      "width": 28,
                    },
                  ]
                }
                tintColor={4294393682}
                vbHeight={24}
                vbWidth={24}
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M0 .001h24v24H0z"
                    fill={null}
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M16 4.001c-1.594 0-3.07.837-4 2.08-.93-1.243-2.406-2.08-4-2.08-2.757 0-5 2.243-5 5 0 5.491 8.124 10.632 8.471 10.848a1 1 0 001.058 0C12.876 19.633 21 14.492 21 9.001c0-2.757-2.243-5-5-5z"
                    fill={4294393682}
                    propList={
                      Array [
                        "fill",
                        "stroke",
                        "strokeWidth",
                      ]
                    }
                    stroke={4294393682}
                    strokeWidth={5}
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingTop": 24,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {},
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 15,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Bonus!
            </Text>
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 15,
                      "textAlign": "center",
                    },
                    Object {
                      "fontWeight": "700",
                    },
                  ],
                ]
              }
            >
              Get an extra life by viewing the lesson
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/vignette_fabernovel_new-1543482536203.png",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color={4294967295}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor={4294967295}
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Video Youtube 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#14171A",
        "overflow": "hidden",
      },
      false,
      Object {
        "height": 180,
      },
    ]
  }
  testID="video-youtube-container"
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Array [
        Object {
          "height": "100%",
          "width": "100%",
        },
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://static.coorpacademy.com/content/CoorpAcademy/content-partnerships-fabernovel/cockpit-fabernovel/default/vignette_fabernovel_new-1543482536203.png",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": undefined,
            "width": undefined,
          },
          undefined,
        ]
      }
      testID="video-youtube-preview-container"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="video-youtube-preview-video"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={70}
          bbWidth={70}
          color={4294967295}
          focusable={false}
          height={70}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "flex": 0,
                "height": 70,
                "width": 70,
              },
            ]
          }
          tintColor={4294967295}
          vbHeight={24}
          vbWidth={24}
          width={70}
        >
          <RNSVGGroup>
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              propList={
                Array [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M11.995 2.003c-5.514 0-10 4.486-10 10 0 5.513 4.486 10 10 10s10-4.487 10-10c0-5.514-4.486-10-10-10zm-3 15v-9l9 4.5-9 4.5z"
              fill={4294967295}
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Resource Without layout 1`] = `null`;
